# lessons

./: .all-contributorsrc  .buildinfo  .gitignore  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.md  conf.py  environment.yml  genindex.html  index.html  index.md  noxfile.py  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml
.circleci/: config.yml
.devcontainer/: devcontainer.json
.doctrees/: CONTRIBUTING.doctree  environment.pickle  index.doctree
.github/: dependabot.yml
_sources/: CONTRIBUTING.md.txt  index.md.txt
clean-modular-code/: clean-code-part-2.md  clean-code-present.md  doi_urls.csv  intro-clean-code.html  intro-clean-code.md  joss-pyos-data.md  pep8-package-imports.html  pep8-package-imports.md  python-dry-modular-code.html  python-dry-modular-code.md  python-expressive-code.html  python-expressive-code.md  python-function-checks.html  python-function-checks.md  python-functions.html  python-functions.md  python-pep-8.html  python-pep-8.md  tests-checks.md  write-pseudocode.html  write-pseudocode.md
code-workflow-logic/: about-python-functions.md  intro.md  python-common-exceptions.md  python-conditionals.md  python-conditionals2.md  python-function-checks.md  python-functions-multi-parameters.md  write-python-functions.md
contribute-open-source/: 1fork-repo.md  1identify-issue.md  clone-repo.md  edit-commit-files.md  fork-repo.md  get-to-know-repo.md  github-codespaces.md  identify-issue.md  index.md  index1.md  pull-request.md  social-open-source.md  ways-to-contribute.md  what-is-git-github.md  (+1 more)
github-git/: intro.md  (+20 more)
(+116 files in other folders)
