[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyos-lessons"
dynamic = [
    "version"
]
dependencies = [
    "pyos-sphinx-theme",
    "myst-nb",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-favicon",
    "sphinx-togglebutton",
    # XML feed for analytics
    "sphinx-sitemap",
    # Support for social / adds meta tags
    "sphinxext-opengraph",
    "sphinx-inline-tabs",
    # for project cards
    "matplotlib",
    "pandas",
    "sphinx-codeautolink"
]

[project.optional-dependencies]
dev = [
    # for general build workflows
    "nox",
    # for prose linting
    "vale",
    # for managing translation files
    "sphinx-intl",
    "jupytext",
]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch]
version.source = "vcs"


# https://github.com/codespell-project/codespell#usage
[tool.codespell]
ignore-words = "codespell-ignore.txt"
skip = "./.git,./.nox,./_static,./_build,codespell-ignore.txt,*.svg"


[tool.jupytext]
# Pair ipynb notebooks to py:percent text notebooks
formats = "ipynb,myst"